[gd_scene load_steps=25 format=3 uid="uid://b7f3nskil4824"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_w3ns7"]
[ext_resource type="PackedScene" uid="uid://dpa4t0rj1qhrx" path="res://robot/RobotModel.blend" id="1_x67i2"]
[ext_resource type="MeshLibrary" uid="uid://b0a2ywkevbv3u" path="res://game_map/basic_tilles.meshlib" id="2_a6k82"]
[ext_resource type="Texture2D" uid="uid://ccojqa645pm22" path="res://main_menu/ExitBlock.png" id="3_xyqmc"]
[ext_resource type="Texture2D" uid="uid://og6tb1kaq83p" path="res://main_menu/SelectMapBlock.png" id="4_cuksd"]
[ext_resource type="Texture2D" uid="uid://hdaxgqb7e0nv" path="res://main_menu/ExitBlockEmissive.png" id="5_c1la5"]
[ext_resource type="Texture2D" uid="uid://c5ader816bv2a" path="res://main_menu/PlayBlock.png" id="5_sutp7"]
[ext_resource type="Texture2D" uid="uid://dow3s5jxxdq5d" path="res://main_menu/SelectMapBlockEmissive.png" id="7_pilso"]
[ext_resource type="Texture2D" uid="uid://cjmqu0vx4qmv7" path="res://main_menu/PlayBlockEmissive.png" id="9_5yy8c"]
[ext_resource type="AudioStream" uid="uid://c416b01cf5tr4" path="res://main_menu/sineD#.wav" id="10_q8shr"]
[ext_resource type="PackedScene" uid="uid://1d45wccrvb8f" path="res://main_menu/pick_map_screen.tscn" id="11_0ajeg"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0fgui"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_beawc"]
sky_material = SubResource("ProceduralSkyMaterial_0fgui")

[sub_resource type="Environment" id="Environment_88bkb"]
background_mode = 2
sky = SubResource("Sky_beawc")
ssao_enabled = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pg18g"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_digtq"]
albedo_texture = ExtResource("3_xyqmc")
emission_texture = ExtResource("5_c1la5")
uv1_scale = Vector3(3, 2, 2)

[sub_resource type="BoxMesh" id="BoxMesh_xtcnd"]
lightmap_size_hint = Vector2i(10, 13)
material = SubResource("StandardMaterial3D_digtq")
size = Vector3(1, 0.25, 0.25)

[sub_resource type="BoxShape3D" id="BoxShape3D_u0x36"]
size = Vector3(1, 0.25, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dt5en"]
albedo_texture = ExtResource("4_cuksd")
emission_texture = ExtResource("7_pilso")
uv1_scale = Vector3(3, 2, 2)

[sub_resource type="BoxMesh" id="BoxMesh_r15pi"]
lightmap_size_hint = Vector2i(10, 13)
material = SubResource("StandardMaterial3D_dt5en")
size = Vector3(1, 0.25, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qmcpp"]
albedo_texture = ExtResource("5_sutp7")
emission_texture = ExtResource("9_5yy8c")
uv1_scale = Vector3(3, 2, 2)

[sub_resource type="BoxMesh" id="BoxMesh_4d65c"]
lightmap_size_hint = Vector2i(10, 13)
material = SubResource("StandardMaterial3D_qmcpp")
size = Vector3(1, 0.25, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0t5wf"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="TextMesh" id="TextMesh_j1mmv"]
material = SubResource("StandardMaterial3D_0t5wf")
text = "Title Pending"
font_size = 26

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_w3ns7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, 0.433013, -0.75, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_88bkb")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.35451e-08, -0.0871558, 0.996195, -3.8097e-09, 0.996195, 0.0871558, -1, 1.77636e-15, -4.37114e-08, 3, 0.6, 0)

[node name="RobotModel" parent="." instance=ExtResource("1_x67i2")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 1.9, 0, -0.8)

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("2_a6k82")
physics_material = SubResource("PhysicsMaterial_pg18g")
cell_size = Vector3(1, 1, 1)
cell_center_x = false
cell_center_z = false
data = {
"cells": PackedInt32Array(65532, 1, 1, 65532, 3, 1, 65532, 0, 1, 65532, 65535, 1, 65532, 65534, 1, 65532, 65533, 1, 65532, 2, 1, 65532, 4, 1, 65532, 65532, 1, 65532, 65531, 1, 65532, 5, 1, 65532, 65529, 1, 65532, 65530, 1, 65532, 6, 1, 65532, 65528, 1, 65532, 7, 1, 65532, 8, 1, 65532, 65527, 1, 65533, 7, 0, 65533, 6, 0, 65533, 5, 0, 65533, 4, 0, 65533, 3, 0, 65533, 2, 0, 65533, 1, 0, 65533, 0, 0, 65533, 65535, 0, 65533, 65534, 0, 65533, 65533, 0, 65533, 65532, 0, 65533, 65531, 0, 65533, 65530, 0, 65533, 65529, 0, 65533, 65528, 0, 65534, 65530, 0, 65534, 65531, 0, 65534, 65532, 0, 65534, 65533, 0, 65534, 5, 0, 65534, 4, 0, 65534, 3, 0, 65534, 2, 0, 65534, 1, 0, 65534, 0, 0, 65534, 65535, 0, 65534, 65534, 0, 65534, 6, 0, 65534, 65529, 0, 65535, 65531, 0, 65535, 65532, 0, 65535, 65533, 0, 65535, 65534, 0, 65535, 65535, 0, 65535, 0, 0, 65535, 1, 0, 65535, 2, 0, 65535, 3, 0, 65535, 4, 0, 65535, 5, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 0, 4, 0, 1, 2, 0, 2, 0, 0, 2, 65535, 0, 2, 1, 0, 2, 65534, 0, 2, 2, 0, 1, 3, 0, 1, 65533, 0, 0, 65532, 0, 65535, 65530, 0, 0, 65531, 0, 65533, 65527, 0, 0, 5, 0, 65535, 6, 0, 65534, 7, 0, 65533, 8, 0, 65532, 9, 1, 65533, 9, 0)
}

[node name="ExitBlock" type="StaticBody3D" parent="."]
transform = Transform3D(0.5, 0, -0.866026, 0, 1, 0, 0.866026, 0, 0.5, 2, 0.125, 0.4)

[node name="MeshInstance3D" type="MeshInstance3D" parent="ExitBlock"]
mesh = SubResource("BoxMesh_xtcnd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExitBlock"]
shape = SubResource("BoxShape3D_u0x36")

[node name="SelectMapBlock" type="StaticBody3D" parent="."]
transform = Transform3D(-2.98023e-08, 0, -1, 0, 1, 0, 1, 0, -2.98023e-08, 2, 0.375, 0.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SelectMapBlock"]
mesh = SubResource("BoxMesh_r15pi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SelectMapBlock"]
shape = SubResource("BoxShape3D_u0x36")

[node name="StartBlock" type="StaticBody3D" parent="."]
transform = Transform3D(0.258819, 0, -0.965926, 0, 1, 0, 0.965926, 0, 0.258819, 2, 0.625, 0.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StartBlock"]
mesh = SubResource("BoxMesh_4d65c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StartBlock"]
shape = SubResource("BoxShape3D_u0x36")

[node name="PickMapScreen" parent="." instance=ExtResource("11_0ajeg")]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Bloop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_q8shr")

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="ParseErrorMessage" type="AcceptDialog" parent="."]
title = "File Parse Error"
initial_position = 5
size = Vector2i(333, 109)
dialog_text = "hello"
dialog_close_on_escape = false

[node name="Title" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.17101, 0.173648, 0.969846, 0.0301537, 0.984808, -0.17101, -0.984808, 1.83435e-09, -0.173648, 2, 1, 0.2)
mesh = SubResource("TextMesh_j1mmv")

[connection signal="input_event" from="ExitBlock" to="." method="_on_exit_block_input_event"]
[connection signal="mouse_entered" from="ExitBlock" to="." method="_on_exit_block_mouse_entered"]
[connection signal="mouse_exited" from="ExitBlock" to="." method="_on_exit_block_mouse_exited"]
[connection signal="input_event" from="SelectMapBlock" to="." method="_on_select_map_block_input_event"]
[connection signal="mouse_entered" from="SelectMapBlock" to="." method="_on_select_map_block_mouse_entered"]
[connection signal="mouse_exited" from="SelectMapBlock" to="." method="_on_select_map_block_mouse_exited"]
[connection signal="input_event" from="StartBlock" to="." method="_on_start_block_input_event"]
[connection signal="mouse_entered" from="StartBlock" to="." method="_on_start_block_mouse_entered"]
[connection signal="mouse_exited" from="StartBlock" to="." method="_on_start_block_mouse_exited"]
[connection signal="RequestError" from="PickMapScreen" to="." method="_on_pick_map_screen_request_error"]
[connection signal="closed" from="PickMapScreen" to="." method="_on_pick_map_screen_closed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="timeout" from="IdleTimer" to="." method="play_random_idle"]
[connection signal="confirmed" from="ParseErrorMessage" to="." method="_on_parse_error_message_confirmed"]
